<resources>

    <string name="app_name">Firebase Demo</string>
    <string name="facebook_app_id">166745810847472</string>
    <string name="fb_login_protocol_scheme">fb166745810847472</string>

    <string-array name="label_login_labels">
        <item>Social networks</item>
        <item>By phone</item>
        <item>By email</item>
    </string-array>

    <string name="label_login_github">Login with <b>Github</b></string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_phone">Phone</string>
    <string name="label_validation_code">Validation Code</string>
    <string name="label_request_code">Request Code</string>
    <string name="label_validate_code">Validate Code</string>
    <string name="err_field_required">This field is required</string>

    <string name="title_users">Users</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="action_logout">Logout</string>

    <string name="label_message">Message</string>
    <string name="message_nudge"><i>Have just sent a Nudge!</i></string>

    <string name="config_title_notifications">Notifications</string>
    <string name="config_title_general">General</string>
    <string name="config_title_new_users">New users</string>
    <string name="config_title_new_messages">New messages</string>

    <string name="fcm_topic_general">general</string>
    <string name="fcm_topic_new_users">new_users</string>
    <string name="fcm_topic_new_messages">new_messages</string>

    <string name="notif_message_new_user">A new user has logged in</string>

</resources>
