<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="200dp"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_phone">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/requestCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/label_request_code" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/validationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_validation_code"
        android:visibility="gone"
        tools:visibility="visible">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/validateCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/label_validate_code"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>
